Add module-info for avaje-inject-test, adjust logging, fix testing